--- a/src/pages/buy/buy.html
+++ b/src/pages/buy/buy.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      Shopping List
+      Buy item ion-list-header
     </ion-title>
 <div align="right">
 
   </div>
     <ion-buttons end>
-      <button  navPush="AddShoppingItemPage" ion-button>
+      <button  navPush="AddItemPage" ion-button>
           <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
@@ -20,18 +20,18 @@
    <ion-list-header>
 Items
    </ion-list-header>
-   <ion-item *ngFor="let item of shoppingList$ | async" detail-push navPush="EditShoppingItemPage" [navParams]="{item: item}">
-<ion-grid>
-     <ion-row>
-       <ion-col>
-     <h1> {{item.name}}</h1>
-     <p>Quantity in hand   :{{item.quantity}}</p>
+   <ion-item *ngFor="let item of shoppingList$ | async" detail-push navPush="EditItemPage" [navParams]="{item: item}">
+     <ion-grid>
+          <ion-row>
+            <ion-col>
+          <h1> {{item.name}}</h1>
+          <p>Quantity needed   :{{item.quantity}}</p>
 
- </ion-col> <ion-col>
-       <h1><ion-icon name="logo-usd"></ion-icon>{{item.price}}</h1>
-       </ion-col>
-   </ion-row>
-     </ion-grid>
+      </ion-col> <ion-col>
+            <h1><ion-icon name="logo-usd"></ion-icon>{{item.price}}</h1>
+            </ion-col>
+        </ion-row>
+          </ion-grid>
    </ion-item>
 </ion-list>
 
